kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fpainemal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-test-dp
  namespace: fpainemal
  labels:
    app: mi-app-backend-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-test
  template:
    metadata:
      labels:
        app: backend-test
    spec:
      containers:
      - name: backend
        image: wainerock/backend-test
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: backend-test-svc
  namespace: fpainemal
  labels:
    app: mi-app-backend-test
spec:
  selector:
    app: backend-test
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 3000
---
apiVersion: v1
kind: Ingress
metadata:
  name: backend-test-svc
  namespace: fpainemal
spec:
  ingressClassName: nginx
  rules:
  - host: app.backen-test.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backen-test-svc
            port:
              number: 80
